validator per l'input dei form e fix errori ecc lmao